11.6 Add local yml and dont back to 0 list (После смены статуса пользователь остается на текущей странице, плюс локальные настройки)